# YuanZhao

./: .gitignore  README.md  YuanZhao.py  bug16.md  keywords_example.txt  pyproject.toml  requirements.txt  targets_test.txt  test.css
.github/workflows/: ci.yml
core/: config.py  reporter.py  scanner.py
core/detector/: css_detector.py  headless_browser_detector.py  html_detector.py  js_detector.py  keyword_detector.py
tests/: test_config.py  test_integration.py  test_network_utils.py  test_reporters.py  test_rules_loader.py
tests/fixtures/: sample.css  sample.html  sample.js
tests/test_detectors/: test_base.py  test_css.py  test_custom_rules.py  test_hiding.py  test_html.py  test_javascript.py  test_keyword.py
utils/: common_utils.py  css_utils.py  file_utils.py  js_utils.py  logging_utils.py  network_utils.py
yuanzhao/: __init__.py  __main__.py  app.py  cli.py  config.py  logging.py
yuanzhao/detectors/: base.py  css.py  custom_rules.py  headless.py  hiding.py  html.py  javascript.py  keyword.py
yuanzhao/files/: utils.py
yuanzhao/network/: client.py  utils.py
yuanzhao/reporters/: base.py  csv_reporter.py  html.py  json_reporter.py  text.py
yuanzhao/rules/: builtin.yaml  custom_rules.example.yaml  keywords.csv  loader.py
yuanzhao/scanner/: engine.py  targets.py
yuanzhao/templates/: report.html
