[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yuanzhao"
version = "2.0.0"
description = "专业暗链扫描工具 — 检测网站、HTML文件或目录中的隐蔽链接、隐藏元素和恶意代码"
authors = [{name = "KaneTheo"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security",
    "Topic :: Internet :: WWW/HTTP :: Site Management :: Link Checking",
]

dependencies = [
    "beautifulsoup4>=4.9.3",
    "lxml>=4.6.3",
    "requests>=2.25.1",
    "urllib3>=1.26.7",
    "chardet>=4.0.0",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "rich>=13.0",
]

[project.optional-dependencies]
headless = [
    "selenium>=4.0.0",
    "webdriver-manager>=3.5.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.5",
]

[project.scripts]
yuanzhao = "yuanzhao.__main__:main"

[project.urls]
Repository = "https://github.com/KaneTheo/YuanZhao"

[tool.setuptools.packages.find]
include = ["yuanzhao*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line too long (handled by formatter)
    "E402", # module level import not at top (common for Windows guard)
    "B904", # raise-without-from-inside-except (not always desired)
]

[tool.ruff.lint.isort]
known-first-party = ["yuanzhao"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
